[tool.poetry]
name = "jamcito"
version = "0.1.0"
description = ""
authors = ["Gerardo Miranda <https://gerardomiranda.dev>"]
readme = "README.md"
include = ["config.ini"]

[tool.poetry.dependencies]
python = "^3.9"
discord = "^2.3.2"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
service-run = "main:main"